# harbor

./: .gitignore  AGENTS.md  Cargo.toml  HARBOR_V0_1_AUTH_PLAN.md  README.md  package-lock.json  package.json  playwright.config.cjs
crates/harbor/: Cargo.toml
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: domain.rs  error.rs  lib.rs  password.rs  ports.rs  secret.rs  service.rs  store.rs
crates/harbor-core/src/domain/: tests.rs
crates/harbor-core/src/error/: tests.rs
crates/harbor-core/src/password/: tests.rs
crates/harbor-core/src/ports/: tests.rs
crates/harbor-core/src/secret/: tests.rs
crates/harbor-core/src/store/: tests.rs
crates/harbor-core/tests/: domain.rs  error.rs  password.rs  ports.rs  secret.rs  store.rs
crates/harbor-demo/: Cargo.toml
crates/harbor-demo/src/: app.rs  auth.rs  browser.rs  lib.rs  main.rs
crates/harbor-demo/style/: main.css
crates/harbor-email/: Cargo.toml
crates/harbor-email/src/: configured.rs  lib.rs  message.rs  recipient.rs  recording.rs  renderer.rs  resend.rs  tests.rs  url.rs
crates/harbor-headless-demo/: Cargo.toml
crates/harbor-headless-demo/src/: browser.rs  main.rs
crates/harbor-headless-demo/src/browser/: http.rs
crates/harbor-leptos/: Cargo.toml
crates/harbor-leptos/src/: api.rs  app.rs  axum.rs  components.rs  config.rs  cookie.rs  csrf.rs  encoding.rs  flows.rs  lib.rs  links.rs  routes.rs  runtime.rs  sqlx.rs  tests.rs  workflow.rs
crates/harbor-leptos/src/axum/: tests.rs
crates/harbor-leptos/src/components/: tests.rs
crates/harbor-leptos/src/sqlx/: sqlite.rs
crates/harbor-leptos/src/workflow/: tests.rs
crates/harbor-leptos/tests/: axum.rs  components.rs  public_api.rs  workflow.rs
crates/harbor-sqlx/: Cargo.toml  build.rs
crates/harbor-sqlx/migrations/sqlite/: 20260518000100_init.sql
crates/harbor-sqlx/src/: lib.rs  migrations.rs  sqlite.rs
crates/harbor-sqlx/src/sqlite/: codec.rs  connection.rs  mod.rs  options.rs  tests.rs
crates/harbor-sqlx/src/sqlite/tests/: service.rs
crates/harbor-sqlx/tests/: migrations.rs  sqlite.rs  sqlite_service.rs
crates/harbor-sqlx/tests/support/: mod.rs
crates/harbor-test-support/: Cargo.toml
crates/harbor-test-support/src/: error.rs  fixtures.rs  ids.rs  lib.rs  service.rs  store_contracts.rs
crates/harbor-test-support/tests/: public_api.rs
crates/harbor/src/: leptos.rs  lib.rs  prelude.rs
crates/harbor/tests/: public_api.rs
docs/: configuration.md  issuecertificate-deployment.md
docs/decisions/: 0001-v0-1-scope.md
docs/security/: email-auth-assurance.md  session-cookie-policy.md
scripts/: check-dev.sh  check-test.sh  check.sh  clean-target.sh  count-lines.sh  coverage-report.sh  read-rust-slice.sh  read-source-lines.sh  stress-loom.sh  stress-mutants.sh
tests/e2e/: password-signup.spec.js
