[workspace]
members = [
    "crates/harbor-core",
    "crates/harbor-email",
    "crates/harbor-leptos",
    "crates/harbor-sqlx",
    "crates/harbor-test-support",
    "crates/harbor-headless-demo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harbor-rs/harbor"
authors = ["Harbor contributors"]

[workspace.dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "password-hash"] }
axum = { version = "0.8.9", default-features = false, features = ["query"] }
getrandom = { version = "0.3.4", default-features = false }
harbor-core = { path = "crates/harbor-core" }
harbor-email = { path = "crates/harbor-email" }
harbor-leptos = { path = "crates/harbor-leptos" }
harbor-sqlx = { path = "crates/harbor-sqlx" }
harbor-test-support = { path = "crates/harbor-test-support" }
hmac = { version = "0.13.0", default-features = false }
leptos = { version = "0.8.19", default-features = false }
resend-rs = { version = "0.25.1", default-features = false, features = ["rustls-tls"] }
sha2 = { version = "0.11.0", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "runtime-tokio", "sqlite"] }
subtle = { version = "2.6.1", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 0
incremental = true

[profile.release]
debug = 0
incremental = false
strip = "symbols"
