[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
argon2.workspace = true
getrandom.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true

[lints]
workspace = true
