[package]
name = "harbor-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
harbor-core.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
