[package]
name = "harbor-email"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
email-resend = ["dep:resend-rs"]

[dependencies]
harbor-core.workspace = true
resend-rs = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
