[package]
name = "harbor-leptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
harbor-core.workspace = true
harbor-email.workspace = true
leptos.workspace = true

[dev-dependencies]
harbor-sqlx.workspace = true
harbor-test-support.workspace = true
tokio.workspace = true

[lints]
workspace = true
